cmake_minimum_required(VERSION 3.21)
project(untitled168)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled168 main.cpp Asteroid_Kusagi.h Gemi.h Event.h Event_Uret.h Gemi.Uret.h Guclu_Gemi.h Hizli_Gemi.h Normal_Gemi.h Terkedilmis_Gezegen.h Uzay_Korsanlari.h Asteroid_Kusagi.cpp Event.cpp Event_Uret.cpp Gemi.cpp Gemi_Uret.cpp Terkedilmis_Gezegen.cpp Uzay_Korsanlari.cpp)
